# codex-mac-bar

./: .gitignore  LICENSE  Makefile  NEW_FEATURES.md  Package.swift  README.md
.github/workflows/: verify.yml
Fixtures/Protocol/: README.md  rate-limit-contracts.json
Sources/CodexUsageBar/: AppDelegate.swift  CodexUsageBarApp.swift  LaunchAtLoginController.swift  RateLimitPresentation.swift  UsageHealthCheck.swift  UsageMenuBarIcon.swift  UsagePopoverFooter.swift  UsagePopoverRenderer.swift  UsagePopoverView.swift  UsagePreferences.swift  UsageViewModel.swift
Sources/CodexUsageChecks/: main.swift
Sources/CodexUsageCore/: AppServerDiagnostics.swift  CodexAppServerClient.swift  UsageChartMath.swift  UsageDecoding.swift  UsageFetching.swift  UsageFormatting.swift  UsageModels.swift  UsageRange.swift  UsageWindows.swift
Sources/CodexUsageUI/: UsageLineChart.swift
Sources/CodexUsageVisualChecks/: main.swift
linux/: Cargo.toml  Makefile  README.md
linux/data/: io.github.conjfrnk.CodexUsageBar.desktop  waybar-module.jsonc  waybar-style.css
linux/packaging/arch/: PKGBUILD
linux/src/: app_server.rs  autostart.rs  chart.rs  config.rs  fixture.rs  main.rs  model.rs  range.rs  style.css  text_safety.rs  tray.rs  ui.rs
linux/src/chart/: preparation.rs
linux/src/ui/: presentation.rs
linux/tests/: check-dist-reproducible.sh  create-dist.py  package-smoke.sh  validate-package-metadata.sh
scripts/: build-app.sh  check-cargo-policy.py  check-version.sh  generate-app-icon.swift  run-swift-tests.swift  smoke-macos-check.sh  verify-swift-test-output.sh
(+6 files in other folders)
